Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,37 +1080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Buenos Aires',\n",
-       " 'Toronto',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Los Cabos',\n",
-       " 'Greenville',\n",
-       " 'Archipelago Sea',\n",
-       " 'Pyeongchang',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Salina Island',\n",
-       " 'Solta',\n",
-       " 'Iguazu Falls']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "for city in city_names:\n",
-    "    names_and_ranks.append(city)\n",
-    "names_and_ranks"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n"
    ]
   },
   {
