--- a/index.ipynb
+++ b/index.ipynb
@@ -1085,7 +1085,9 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "for index in city_indeces:\n",
+    "    "
    ]
   },
   {
