--- a/index.ipynb
+++ b/index.ipynb
@@ -1087,7 +1087,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    names+andr\n",
+    "    names_and_ranks.append()\n",
     "    "
    ]
   },
