--- a/index.ipynb
+++ b/index.ipynb
@@ -1080,14 +1080,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f\"{index + 1}\" + \". \" + f\"{city_names[index]}\"\")\n",
+    "    names_and_ranks.append(f\"{index + 1}\" + \". \" + f\"{city_names[index]}\")\n",
     "    "
    ]
   },
