--- a/index.ipynb
+++ b/index.ipynb
@@ -1093,16 +1093,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2. Toronto'"
+       "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,7 @@
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[1] # '12. Iguazu Falls'"
+    "names_and_ranks[0] # '12. Iguazu Falls'"
    ]
   },
   {
