--- a/index.ipynb
+++ b/index.ipynb
@@ -1126,7 +1126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for city in cities:\n",
+    "    "
    ]
   },
   {
