--- a/index.ipynb
+++ b/index.ipynb
@@ -1133,9 +1133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Iguazu Falls', 'Argentina', 0, 2396])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations[0] # 2891\n",
     "city_populations[1] # 2732\n",
