--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,13 +1122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-17-2932a59c2567>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-2932a59c2567>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    city_populations.append(city['Population']\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city[]"
+    "    city_populations.append(city['Population']"
    ]
   },
   {
