--- a/index.ipynb
+++ b/index.ipynb
@@ -1145,13 +1145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city['Population'])"
+    "    city_populations.append(city['Population'])\n",
+    "    city_populations"
    ]
   },
   {
