Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2152,7 +2152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for city in citi"
    ]
   },
   {
