Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2153,7 +2153,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city in citi"
+    "for city in cities:\n",
+    "    ciy_areas"
    ]
   },
   {
