--- a/index.ipynb
+++ b/index.ipynb
@@ -2154,7 +2154,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    ciy_areas"
+    "    city_areas.append(city)"
    ]
   },
   {
